Fixed footer link spacing and added CSS grid hover effect

--- a/css/style.css
+++ b/css/style.css
@@ -227,7 +227,7 @@ p
 
 .workGridArea:hover
 {
-  transform: scale(1.1);
+  transform: scale(1.01);
 }
 
 .content-container.footer
